[package]
name = "tokio-postgres-extractor-macros"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc macros for tokio-postgres-extractor"
repository = "https://github.com/mahkoh/tokio-postgres-extractor"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["extra-traits"] }
